# acapy-plugin-rd

./: README.md  pyproject.toml
docker/: Dockerfile  default.yml
plugins/add_endpoint/: __init__.py  message_types.py  routes.py
plugins/common/: traction_decorator.py  traction_message.py
plugins/multitenant_multitoken/: __init__.py  manager.py  provider.py
plugins/override_protocol/: __init__.py  routes.py
scripts/: docker-compose.yml
