[tool.poetry]
name = "acapy-plugin-prd"
version = "0.0.1"
description = "ACA-py Plugin Research and Development"
authors = ["Jason Sherman <tools@usingtechnolo.gy>"]
license = "Apache-2.0"

[tool.poetry.dependencies]
python = ">=3.6.9,<4.0"
aries-cloudagent = { version = "^0.7.4" }
pydantic = "^1.8.1"
typing-extensions = "^3.7.4"
python-dateutil = "^2.8.1"

# ACA-Py Optionals
python3-indy = { version = ">=1.11.1<2", optional = true }

[tool.poetry.dev-dependencies]
pre-commit = "^2.12.0"
black = "^22.6.0"
flake8 = "^5.0.4"
pytest = "^6.2.3"
pytest-asyncio = "^0.14.0"

[tool.poetry.extras]
indy = ["python3-indy"]

[build-system]
requires = ["setuptools", "poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
